--- a/images/index.html
+++ b/images/index.html
@@ -32,15 +32,16 @@
       <div class="dropdown">
       <button class="tablinks2" onclick="openCity2(event, 'section3')">Favs</button>
       <div class="dropdown-content">
-      <a onclick= "openCity2(event, 'section5')">Link 1</a>
+      <a onclick= "openCity2(event, 'section5')">Fav Colors</a>
+      <a onclick= "openCity2(event, 'section3')">Fav Foods</a>
   </div>
 </div>
 </div>
 
 
 <div id="section25" class="tabcontent1">
-     <b><h1 style="color: peachpuff;"> <br>All About Ma Name </h1></b>
-        <b><p style="font-size: 25px;color: white; "> My actual name is Aleef Noor. My first name could mean a leaf but it also is the 
+     <b><h1 style="color: darkred;"> <br>All About Ma Name </h1></b>
+        <b><p style="font-size: 25px; color: darkblue; "> My actual name is Aleef Noor. My first name could mean a leaf but it also is the 
         <i><b>first letter of the arabic alphabet</i></b>.
         You know enough history about my first name. Now, let us get to know my last name. <br> My last name is Noor. Noor means light.
         So, I like to think my name means <b><i> First Light. </i></b>
@@ -70,11 +71,11 @@
       </div>
 
     <div id="section5" class="tabcontent1" >
-      <b><h7 style="font-size: 200%; color: dodgerblue;">  Fav Colors </h7></b>
+      <b><h7 style="font-size: 300%; color: dodgerblue;">  Fav Colors </h7></b>
       <br>
       <br><img src="color.png" width="150" > <img src="bright.jpg" width="150" >
-      <br><p2 style="font-size: 25px; color: indigo;"> I love pastel and bright colors. My most fav colors are <b> cotton candy pink</b> and <b> sky blue. </b>
-      <br> I also like neon green.</p2>
+      <br><p2 style="font-size: 30px; color: indigo;"> I love pastel and bright colors. My most fav colors are <b> cotton candy pink</b> and <b> sky blue. </b>
+  I also like <b>neon green</b>. I dislike dark colors like black or maroon. They make me feel gloomy and dull. Bright and pastel colors cheer me up and make feel energetic</p2>
     </div>
 
    <div class="slideshow-container">
