--- a/images/index.html
+++ b/images/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="some.css" media="screen" />
 
     </head>
-        <body align= "center">
+        <body>
         <div class="tab">
           <button class="tablinks" onclick="openCity(event, 'intro')" id="defaultOpen">Home</button>
           <button class="tablinks" onclick="openCity(event, 'section2')">About Me</button>
@@ -23,7 +23,7 @@
           <p style="clear: both;">
         </div>
 
-        <div id="section2" class="tabcontent" align="center">
+        <div id="section2" class="tabcontent">
                 <div class="tab2" >
               <button class="tablinks2" onclick="openCity2(event, 'section6')" id="defaultOpen2">My Family</button>
               <button class="tablinks2" onclick="openCity2(event, 'section4')">Hobbies</button>
@@ -155,8 +155,8 @@
 
 
         <div>
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev" onclick="plusSlides(-1)">&#8249;</a>
+        <a class="next" onclick="plusSlides(1)">&#8250;</a>
         </div>
 
            <div style="text-align:center">
