--- a/images/index.html
+++ b/images/index.html
@@ -9,18 +9,15 @@
 
     </head>
         <body>
-        <div class="tab">
-          <button class="tablinks" onclick="openCity(event, 'intro')" id="defaultOpen">Home</button>
-          <button class="tablinks" onclick="openCity(event, 'section2')">About Me</button>
-          <button class="tablinks" onclick="openCity(event, 'section8')">Projects</button>
+        <div class="tab" align="center">
+          <button class="tablinks" align="center"onclick="openCity(event, 'section8')">Projects</button>
+          <button class="tablinks" align="center"onclick="openCity(event, 'section2')">About Me</button>
+           <button class="tablinks" align="center"onclick="openCity(event, 'intro')" id="defaultOpen">Home</button>
         </div>
 
 
-        <div id="intro"  align="left" class="tabcontent">
-          <img src="me3.jpg" height="580" width="300" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-          <img src="intro.png " height="580" width="300" style="float: left; width: 40%; margin-right: 1%; margin-bottom: 0.5em;">
-          <img src="intro2.jpg" src="me3.jpg" height="580" width="300" style="float: left; width: 27%; margin-right: 1%; margin-bottom: 0.5em;">
-          <p style="clear: both;">
+        <div id="intro" align="center" class="tabcontent">
+          <img src="intro.png" align="center" width="900" height="750">
         </div>
 
         <div id="section2" class="tabcontent">
